// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link.vue should not pass href attribute to the a element 1`] = `
<a
  href="javsscript:void(0);"
/>
`;

exports[`Link.vue should pass attributes to the a element 1`] = `
<a
  href="javsscript:void(0);"
  target="_blank"
/>
`;

exports[`Link.vue should render a Link 1`] = `
<a
  href="javsscript:void(0);"
/>
`;
